[dozmod] Move subpages to pages/, hide pages where user has no permission

--- a/modules-available/dozmod/templates/images-delete.html
+++ b/modules-available/dozmod/templates/images-delete.html
@@ -9,6 +9,7 @@
 		<div class="table-responsive">
 			<form id="delform" method="post" action="?do=DozMod" onsubmit="return slxPostdel()">
 				<input type="hidden" name="token" value="{{token}}">
+				<input type="hidden" name="section" value="expiredimages">
 				<input type="hidden" name="action" value="delimages">
 				<table class="table table-stripped table-condensed stupidtable">
 					<thead>
