--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -116,6 +116,7 @@
 			<br>
 			<input type="hidden" name="token" value="{{token}}">
 			<input type="hidden" name="action" value="runtime">
+			<input type="hidden" name="section" value="runtimeconfig">
 			<div class="text-right">
 				<button {{^allowedSave}}disabled{{/allowedSave}} class="btn btn-primary" type="submit" name="button" value="save"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 			</div>
