--- a/modules-available/dozmod/templates/mailconfig.html
+++ b/modules-available/dozmod/templates/mailconfig.html
@@ -55,13 +55,14 @@
 			</div>
 			<br>
 			<div class="text-right">
-				<button {{^allowedTest}}disabled{{/allowedTest}} class="btn btn-warning" type="button" id="test-button" name="button" value="test" onclick="slxTestConfig()"><span class="glyphicon glyphicon-envelope"></span> {{lang_test}}</button>
+				<button {{perms.mailconfig.testmail.disabled}} class="btn btn-warning" type="button" id="test-button" name="button" value="test" onclick="slxTestConfig()"><span class="glyphicon glyphicon-envelope"></span> {{lang_test}}</button>
 				<span id="test-spin" style="display:none"><span class="glyphicon glyphicon-refresh slx-rotation"></span></span>
-				<pre id="test-output" style="display:none"></pre>
-				<button {{^allowedSave}}disabled{{/allowedSave}} class="btn btn-primary" type="submit" name="button" value="save"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
+				<pre id="test-output" style="display:none;text-align:left"></pre>
+				<button {{perms.mailconfig.save.disabled}} class="btn btn-primary" type="submit" name="button" value="save"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
 				<br>
 				<input type="hidden" name="token" value="{{token}}">
 				<input type="hidden" name="action" value="mail">
+				<input type="hidden" name="section" value="mailconfig">
 			</div>
 		</form>
 	</div>
