--- a/modules-available/serversetup-bwlp/templates/ipaddress.html
+++ b/modules-available/serversetup-bwlp/templates/ipaddress.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default {{^editAllowed}}disabledPanel{{/editAllowed}}">
+<div class="panel panel-default">
 	<div class="panel-heading">
 		{{lang_bootAddress}}
 	</div>
@@ -20,7 +20,10 @@
 					{{/default}}
 					{{^default}}
 					<td>
-						<button class="btn btn-primary btn-xs" name="ip" value="{{ip}}"><span class="glyphicon glyphicon-flag"></span> {{lang_set}}</button>
+						<button class="btn btn-primary btn-xs" name="ip" value="{{ip}}" {{perms.edit.address.disabled}}>
+							<span class="glyphicon glyphicon-flag"></span>
+							{{lang_set}}
+						</button>
 					</td>
 					{{/default}}
 				</tr>
