--- a/modules-available/serversetup-bwlp/templates/ipxe.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe.html
@@ -3,7 +3,7 @@
 	<input type="password" name="password_fake" id="password_fake" value="" style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="hidden" name="action" value="ipxe">
 	<input type="hidden" name="token" value="{{token}}">
-	<div class="panel panel-default {{^editAllowed}}disabledPanel{{/editAllowed}}">
+	<div class="panel panel-default">
 		<div class="panel-heading">
 			{{lang_bootMenu}}
 		</div>
@@ -16,15 +16,15 @@
 			<div class="form-group">
 				<strong>{{lang_bootBehavior}}</strong>
 				<div class="radio">
-					<input type="radio" name="defaultentry" value="net" {{active-net}} id="id-net">
+					<input type="radio" name="defaultentry" value="net" {{active-net}} id="id-net" {{perms.edit.menu.disabled}}>
 					<label for="id-net">bwLehrpool</label>
 				</div>
 				<div class="radio">
-					<input type="radio" name="defaultentry" value="hdd" {{active-hdd}} id="id-hdd">
+					<input type="radio" name="defaultentry" value="hdd" {{active-hdd}} id="id-hdd" {{perms.edit.menu.disabled}}>
 					<label for="id-hdd">{{lang_localHDD}}</label>
 				</div>
 				<div class="radio">
-					<input type="radio" name="defaultentry" value="custom" {{active-custom}} id="id-custom">
+					<input type="radio" name="defaultentry" value="custom" {{active-custom}} id="id-custom" {{perms.edit.menu.disabled}}>
 					<label for="id-custom">{{lang_customEntry}} (&quot;custom&quot;)</label>
 				</div>
 			</div>
@@ -32,7 +32,7 @@
 			<div class="form-group">
 				<strong>{{lang_menuDisplayTime}}</strong>
 				<div class="input-group form-narrow">
-					<input type="text" class="form-control" name="timeout" value="{{timeout}}" pattern="\d+">
+					<input type="text" class="form-control" name="timeout" value="{{timeout}}" pattern="\d+" {{perms.edit.menu.readonly}}>
 					<span class="input-group-addon">{{lang_seconds}}</span>
 				</div>
 			</div>
@@ -40,22 +40,22 @@
 			<div class="form-group">
 				<strong>{{lang_masterPassword}}</strong>
 				<div class="form-narrow">
-					<input type="{{password_type}}" class="form-control" name="masterpassword" value="{{masterpasswordclear}}">
+					<input type="{{password_type}}" class="form-control" name="masterpassword" value="{{masterpasswordclear}}" {{perms.edit.menu.readonly}}>
 				</div>
 				<i>{{lang_masterPasswordHelp}}</i>
 			</div>
 
 			<div class="form-group">
 				<strong>{{lang_menuCustom}}</strong> <a class="btn btn-default btn-xs" data-toggle="modal" data-target="#help-custom"><span class="glyphicon glyphicon-question-sign"></span></a>
-				<textarea class="form-control" name="custom" rows="8">{{custom}}</textarea>
+				<textarea class="form-control" name="custom" rows="8" {{perms.edit.menu.readonly}}>{{custom}}</textarea>
 			</div>
 		</div>
 
 		<div class="panel-footer">
-			<button class="btn btn-primary pull-right" name="action" value="ipxe" {{^editAllowed}}disabled{{/editAllowed}}>{{lang_bootMenuCreate}}</button>
+			<button class="btn btn-primary pull-right" name="action" value="ipxe" {{perms.edit.menu.disabled}}>{{lang_bootMenuCreate}}</button>
 			<div>
 				<div class="btn-group" role="group">
-					<a class="btn btn-default {{^downloadAllowed}}disabled{{/downloadAllowed}}" href="?do=ServerSetup&amp;action=getimage">
+					<a class="btn btn-default {{perms.download.disabled}}" href="?do=ServerSetup&amp;action=getimage">
 						<span class="glyphicon glyphicon-download-alt"></span>
 						{{lang_downloadImage}}
 					</a>
