[systemstatus] Use new permission helpers; disable non-accessible tabs

--- a/modules-available/systemstatus/templates/_page.html
+++ b/modules-available/systemstatus/templates/_page.html
@@ -11,11 +11,20 @@
 		</a>
 	</li>
 	{{#tabs}}
+		{{^enabled}}
+		<li class="disabled">
+			<a>
+				{{name}}
+			</a>
+		</li>
+		{{/enabled}}
+		{{#enabled}}
 		<li>
 			<a href="#id-{{type}}_pane" class="ajax-tab" id="id-{{type}}" data-toggle="tab" role="tab">
 				{{name}}
 			</a>
 		</li>
+		{{/enabled}}
 	{{/tabs}}
 </ul>
 
@@ -86,7 +95,7 @@
 						<form class="form-adduser" action="?do=SystemStatus" method="post">
 							<input type="hidden" name="token" value="{{token}}">
 							<input type="hidden" name="action" value="reboot">
-							<button {{^allowedToReboot}}disabled{{/allowedToReboot}} class="btn btn-warning" type="button" data-toggle="modal" data-target="#rebootServerModal"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
+							<button {{perms.serverreboot.disabled}} class="btn btn-warning" type="button" data-toggle="modal" data-target="#rebootServerModal"><span class="glyphicon glyphicon-repeat"></span> {{lang_serverReboot}}</button>
 
 
 							<div class ="modal fade" id="rebootServerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
