--- a/modules-available/webinterface/templates/passwords.html
+++ b/modules-available/webinterface/templates/passwords.html
@@ -1,27 +1,27 @@
 <form action="?do=WebInterface" method="post">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="action" value="password">
-	<div class="panel panel-default {{^editAllowed}}disabledPanel{{/editAllowed}}">
+	<div class="panel panel-default">
 		<div class="panel-heading">{{lang_passwordFields}}</div>
 		<div class="panel-body">
 			<p>{{lang_passwordsDescription}}</p>
-			<div class="input-group" onclick="$('#pmshow').prop('checked', true)">
+			<div class="input-group row-select">
 				<span class="input-group-addon">
-					<div class="radio">
-						<input id="pmshow" type="radio" name="mode" value="show" {{selected_show}}>
+					<span class="radio">
+						<input id="pmshow" type="radio" name="mode" value="show" {{selected_show}} {{perms.edit.password.disabled}}>
 						<label></label>
-					</div>
+					</span>
 				</span>
 				<span class="form-control">
 					{{lang_showPasswords}}
 				</span>
 			</div>
-			<div class="input-group" onclick="$('#pmhide').prop('checked', true)">
+			<div class="input-group row-select">
 				<span class="input-group-addon">
-					<div class="radio">
-						<input id="pmhide" type="radio" name="mode" value="hide" {{selected_hide}}>
+					<span class="radio">
+						<input id="pmhide" type="radio" name="mode" value="hide" {{selected_hide}} {{perms.edit.password.disabled}}>
 						<label></label>
-					</div>
+					</span>
 				</span>
 				<span class="form-control">
 					{{lang_hidePasswords}}
@@ -29,7 +29,10 @@
 			</div>
 			<br>
 			<div class="pull-right">
-				<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
+				<button type="submit" class="btn btn-primary" {{perms.edit.password.disabled}}>
+					<span class="glyphicon glyphicon-floppy-disk"></span>
+					{{lang_save}}
+				</button>
 			</div>
 		</div>
 	</div>
