[vmstore] lang_intern -> lang_internal

--- a/modules-available/vmstore/templates/page-vmstore.html
+++ b/modules-available/vmstore/templates/page-vmstore.html
@@ -13,7 +13,7 @@
 		<div class="panel-heading">
 			<div class="radio">
 				<input type="radio" name="storetype" value="internal" {{pre-internal}} id="id-internal">
-				<label for="id-internal">{{lang_intern}}</label>
+				<label for="id-internal">{{lang_internal}}</label>
 			</div>
 		</div>
 		<div class="panel-body">
