[permissionmanager] Implement permissions:
Permissinmanager is now protected by permissions.
In order to prevent complete lockout, the user with
userid == 1 will always be able to edit and assign permissions.
(TODO: Communicate this somehow)

--- a/modules-available/permissionmanager/templates/header-menu.html
+++ b/modules-available/permissionmanager/templates/header-menu.html
@@ -4,17 +4,17 @@
 			<input type="hidden" name="do" value="permissionmanager">
 
 			<div class="btn-group {{groupClass}}">
-				<button class="btn btn-default {{rolesButtonClass}}" type="submit" name="show" value="roles">
+				<button class="btn btn-default {{rolesButtonClass}}" type="submit" name="show" value="roles" {{perms.roles.disabled}}>
 					<span class="glyphicon glyphicon-education"></span>
 					{{lang_roles}}
 				</button>
 
-				<button class="btn btn-default {{usersButtonClass}}" type="submit" name="show" value="users">
+				<button class="btn btn-default {{usersButtonClass}}" type="submit" name="show" value="users" {{perms.users.disabled}}>
 					<span class="glyphicon glyphicon-user"></span>
 					{{lang_users}}
 				</button>
 
-				<button class="btn btn-default {{locationsButtonClass}}" type="submit" name="show" value="locations">
+				<button class="btn btn-default {{locationsButtonClass}}" type="submit" name="show" value="locations" {{perms.locations.disabled}}>
 					<span class="glyphicon glyphicon-home"></span>
 					{{lang_locations}}
 				</button>
