--- a/modules-available/adduser/templates/page-adduser.html
+++ b/modules-available/adduser/templates/page-adduser.html
@@ -1,28 +1,39 @@
 <form class="form-adduser" action="?do=AddUser" method="post">
 	<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-2000px" tabindex="-1">
 	<input type="password" name="password_fake" id="password_fake" value=""  style="position:absolute;top:-2000px" tabindex="-1">
-	<h2 class="form-signin-heading">{{lang_createUser}}</h2>
+	<h2>{{lang_createUser}}</h2>
 	<div class="row">
-		<div class="col-md-4">{{lang_username}} *</div>
-		<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="{{lang_username}}" autofocus></div>
+		<div class="col-md-4"><label for="login">{{lang_login}} *</label></div>
+		<div class="col-md-4"><input id="label" type="text" name="login" value="{{login}}" class="form-control" placeholder="{{lang_username}}" autofocus></div>
 	</div>
+	<br>
 	<div class="row">
-		<div class="col-md-4">{{lang_password}} *</div>
-		<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="{{lang_password}}"></div>
+		<div class="col-md-4"><label for="pass1">{{lang_password}} *</label></div>
+		<div class="col-md-4"><input id="pass1" type="password" name="pass1" class="form-control" placeholder="{{lang_password}}"></div>
 		<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="{{lang_confirmation}}"></div>
 	</div>
+	<br>
 	<div class="row">
-		<div class="col-md-4">{{lang_fullName}} *</div>
-		<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{lang_fullName}}"></div>
+		<div class="col-md-4"><label for="fullname">{{lang_fullName}} *</label></div>
+		<div class="col-md-4"><input id="fullname" type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{lang_fullName}}"></div>
 	</div>
+	<br>
 	<div class="row">
-		<div class="col-md-4">{{lang_telephone}}</div>
-		<div class="col-md-4"><input type="text" name="phone" value="{{phone}}" class="form-control" placeholder="{{lang_telephone}}"></div>
+		<div class="col-md-4"><label for="phone">{{lang_phone}}</label></div>
+		<div class="col-md-4"><input id=phone" type="text" name="phone" value="{{phone}}" class="form-control" placeholder="{{lang_phone}}"></div>
 	</div>
+	<br>
 	<div class="row">
-		<div class="col-md-4">E-Mail</div>
-		<div class="col-md-4"><input type="text" name="email" value="{{email}}" class="form-control" placeholder="E-Mail"></div>
+		<div class="col-md-4"><label for="email">{{lang_email}}</label></div>
+		<div class="col-md-4"><input id="email" type="text" name="email" value="{{email}}" class="form-control" placeholder="{{lang_email}}"></div>
 	</div>
-	<button class="btn btn-lg btn-primary btn-block" type="submit">{{lang_createUser}}</button>
+	<br>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-8">
+			<button class="btn btn-lg btn-primary btn-block" type="submit">{{lang_createUser}}</button>
+		</div>
+	</div>
 	<input type="hidden" name="action" value="adduser">
+	<input type="hidden" name="token" value="{{token}}">
 </form>
